2014-03-10  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c src/qtterminal/qt_term.cpp src/wxterminal/gp_cairo.c
	src/term_api.h term/svg.trm demo/bolditalic.dem:

	Revised syntax for bold/italic markup of text as per suggestions on
	gnuplot-beta list. Rather than the TeX-like \bf and \it it now accepts
	    {/font=size:Bold:Italic  text}
	    {/font:Bold:Italic=size  text}
	    {/:Bold text_{:/Normal text}
	Tested on wxt, qt, svg, cairo terminals, libgd terminals, and PostScript.
	I don't know how it manages to work on libgd or PostScript (I did
	not modify the existing code), but suspect that it depends on having
	a clever system font manager.  Still needed: documentation and support
	for more terminals.

	* term/post.trm: Not all "set term post" commands were correctly
	defaulting to enhanced text mode.

	* src/plot2d.c src/plot3d.c: Auto-increment point types strictly in
	sync with line types.  This removes the oddity that automatically
	generated point types would not necessarily match the plot number.

2014-03-09  Ethan A Merritt  <merritt@u.washington.edu>

	* src/eval.c src/eval.h src/internal.c src/parse.c src/scanner.c
	src/internal.h demo/rgba_lines.dem docs/gnuplot.doc:
	Bit shifting binary operators << and >>.

	* src/term.c:  boldface or italic markup can be in either order.

2014-03-09  Bastian Maerkisch  <bmaerkisch@web.de>

	* demo/arrowstyle.dem:  Simplify by using loops and the special
	file '+'.

2014-03-09  Alexander Täschner  <taschna@users.sourceforge.net>

	* src/fit.c src/fit.h src/save.c src/setshow.h src/set.c src/show.c
	src/unset.c docs/gnuplot.doc:  Optionally store final covariance
	matrix to user variables named "FIT_COV_a_b", where 'a', 'b' are
	parameter names.
	Patch #654

2014-03-09  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (enhanced_recursion): Add LaTeX-like markup for boldface
	and italic in enhanced text mode:
		'{\it italic} {/Times=12 \bf boldface}'