@@ -1,3 +1,9 @@
+2014-03-12  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/term.c (enhanced_recursion):  Bugfix for bold/italic.
+
+	* demo/enhanced_utf8.dem:  And bold/italic markup to demo.
+
 2014-03-10  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/term.c src/qtterminal/qt_term.cpp src/wxterminal/gp_cairo.c
@@ -7,7 +13,7 @@
 	gnuplot-beta list. Rather than the TeX-like \bf and \it it now accepts
 	    {/font=size:Bold:Italic  text}
 	    {/font:Bold:Italic=size  text}
-	    {/:Bold text_{:/Normal text}
+	    {/:Bold text_{:/Normal text}}
 	Tested on wxt, qt, svg, cairo terminals, libgd terminals, and PostScript.
 	I don't know how it manages to work on libgd or PostScript (I did
 	not modify the existing code), but suspect that it depends on having
